--- a/YoCars/YoCars.csproj
+++ b/YoCars/YoCars.csproj
@@ -26,6 +26,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
     </ItemGroup>
 
 
