--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD YoDrive
 
 on:
   push:
@@ -11,28 +11,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2 
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16
-
-    - name: Install Dependencies
-      run: npm ci
-
-    - name: Build React App
-      run: npm start
-
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: 7.0.100
-
-    - name: Build and Publish C# Backend
-      run: |
-        dotnet build
-        dotnet publish -c Release -o publish
+      - name: Get repository code
+        uses: actions/checkout@v3
+      - name: Install dependecies
+        run: npm ci
+      - name: Build application
+        run: npm run build
