--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Get repository code
         uses: actions/checkout@v3
       - name: Install dependecies
-        run: npm --prefix yo_drive_client ci
+        run: npm --prefix yo_drive_client install
       - name: Build application
         run: npm --prefix yo_drive_client run build
