--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -13,6 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: false 
+      
+    services:
+      postgres:
+        image: postgres:16 
+        env:
+          POSTGRES_DB: yodrivedb
+          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: admin
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -25,6 +39,8 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build --no-restore
+      - name: Run Migrations
+        run: dotnet ef database update
 
       - name: Install Node.js
         uses: actions/setup-node@v2
