--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -43,7 +43,7 @@ jobs:
         run: dotnet tool install --global dotnet-ef
       - name: Apply Migrations to PostgreSQL
         run: |
-              dotnet ef database update --connection "Host=localhost;Port=5432;Database=yodrivedb;Username=postgres;Password=admin"
+              dotnet ef database update --project ./YoDrive --connection "Host=localhost;Port=5432;Database=yodrivedb;Username=postgres;Password=admin"
         working-directory: /YoDrive
 
       - name: Install Node.js
