Удалил миграции и сделал новую (старые работали неправильно)

--- a/YoDrive/YoDrive.csproj
+++ b/YoDrive/YoDrive.csproj
@@ -36,5 +36,9 @@
       </Content>
 
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
     
 </Project>
