--- a/yo_drive_client/package.json
+++ b/yo_drive_client/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "swiper": "^10.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
