--- a/yo_drive_client/package.json
+++ b/yo_drive_client/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
@@ -54,8 +55,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.19.3",
     "@types/react-date-range": "^1.4.7",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-router-dom": "^5.3.3"
   }
 }
