--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Install EF Core Tools
-        run: dotnet tool install --global dotnet-ef
+        run: dotnet tool install --global dotnet-ef --version 7.0.0
       - name: Apply Migrations to PostgreSQL
         run: |
               dotnet ef database update --project YoDrive --connection "Host=localhost;Port=5432;Database=yodrivedb;Username=postgres;Password=admin"
