--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Apply Migrations to PostgreSQL
         run: |
               dotnet ef database update --project YoDrive --connection "Host=localhost;Port=5432;Database=yodrivedb;Username=postgres;Password=admin"
-        working-directory: ../../YoDrive
+        working-directory: YoDrive
 
       - name: Install Node.js
         uses: actions/setup-node@v2
