--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -37,11 +37,22 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Install EF Core Tools
-        run: dotnet tool install --global dotnet-ef --version 7.0.0
+        run: dotnet tool install --global dotnet-ef --version 7.0.x
+      - name: Connect to PostgreSQL
+        # Runs a script that creates a PostgreSQL table, populates
+        # the table with data, and then retrieves the data.
+        run: node client.js
+        # Environment variable used by the `client.js` script to create
+        # a new PostgreSQL client.
+        env:
+          # The hostname used to communicate with the PostgreSQL service container
+          POSTGRES_HOST: postgres
+          # The default PostgreSQL port
+          POSTGRES_PORT: 5432  
       - name: Apply Migrations to PostgreSQL
         run: |
               dotnet ef database update --project YoDrive --connection "Host=localhost;Port=5432;Database=yodrivedb;Username=postgres;Password=admin"
-        working-directory: YoDrive
+        working-directory: ./YoDrive
 
       - name: Install Node.js
         uses: actions/setup-node@v2
