--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Install EF Core Tools
-        run: dotnet tool install --global dotnet-ef --version 7.0.x
+        run: dotnet tool install --global dotnet-ef --version 7.0.0
       - name: Connect to PostgreSQL
         # Runs a script that creates a PostgreSQL table, populates
         # the table with data, and then retrieves the data.
