--- a/yo_drive_client/package.json
+++ b/yo_drive_client/package.json
@@ -15,10 +15,13 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
