--- a/yo_drive_client/package.json
+++ b/yo_drive_client/package.json
@@ -4,31 +4,33 @@
   "homepage": "https://yodrive.github.io/Course_Work",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "7.14.5",
-    "@smastrom/react-rating": "1.3.2",
-    "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/axios": "0.14.0",
-    "@types/jest": "27.5.2",
-    "@types/node": "16.18.46",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "axios": "1.5.1",
-    "date-fns": "2.30.0",
-    "mobx": "6.10.2",
-    "mobx-react-lite": "4.0.5",
-    "react": "18.2.0",
-    "react-date-range": "1.4.0",
-    "react-datepicker": "4.21.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.47.0",
-    "react-router-dom": "6.16.0",
-    "react-scripts": "5.0.1",
-    "react-simple-star-rating": "5.1.7",
-    "swiper": "10.3.1",
-    "typescript": "4.9.5",
-    "web-vitals": "2.1.4"
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
+    "@smastrom/react-rating": "^1.3.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.46",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.5",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.21.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
+    "react-simple-star-rating": "^5.1.7",
+    "swiper": "^10.3.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,8 +57,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-date-range": "1.4.7",
-    "@types/react-datepicker": "4.19.3",
-    "@types/react-router-dom": "5.3.3"
+    "@types/react-date-range": "^1.4.7",
+    "@types/react-datepicker": "^4.19.3",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
