--- a/yo_drive_client/package.json
+++ b/yo_drive_client/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "antd": "^5.15.2",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "mobx": "^6.10.2",
